--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,6 +1,6 @@
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.MaterialYouFromEalipatov" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+    <style name="Theme.MaterialYouFromEalipatov" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/purple_500</item>
         <item name="colorPrimaryVariant">@color/purple_700</item>
@@ -10,94 +10,7 @@
         <item name="colorSecondaryVariant">@color/teal_700</item>
         <item name="colorOnSecondary">@color/black</item>
         <!-- Status bar color. -->
-        <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
+        <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
-        <item name="textColorConnected">@color/green</item>
-        <item name="textColorDisConnected">@color/light_gray</item>
     </style>
-
-    <style name="AppTheme" parent="Theme.MaterialYouFromEalipatov">
-        <item name="textColorConnected">@color/color_connected</item>
-        <item name="textColorDisConnected">@color/color_disconnected</item>
-
-        <item name="textAppearanceButton">@style/AppTextAppearance.Button</item>
-        <!-- Цвет текста заголовка-->
-        <item name="textColorTitle">@android:color/black</item>
-        <!-- Цвет текста основного-->
-        <item name="textColorBody">@android:color/black</item>
-        <!-- Цвет фона -->
-        <item name="backgroundAppThemeColor">@color/light_gray</item>
-        <!-- Цвет фона BottomSheet-->
-        <item name="backgroundBottomSheetColor">@color/color_primary</item>
-
-        <!-- Цвет фона Chip-->
-        <item name="appChipBackgroundColor">@color/moon_primary_light_night_color</item>
-        <!-- Цвет фона CardView-->
-        <item name="appCardViewBackgroundColor">@color/moon_background_color</item>
-
-        <!-- Стиль для чипов -->
-        <item name="chipStyle">@style/AppChipChoice</item>
-        <!-- Стиль для material card -->
-        <item name="materialCardViewStyle">@style/AppCard</item>
-
-    </style>
-
-    <style name="MoonTheme" parent="AppTheme">
-        <item name="colorPrimary">@color/moon_primary_color</item>
-        <item name="colorPrimaryVariant">@color/moon_primary_dark_color</item>
-        <item name="colorOnPrimary">@color/moon_primary_light_color</item>
-
-        <item name="colorSecondary">@color/moon_secondary_color</item>
-        <item name="colorSecondaryVariant">@color/moon_secondary_dark_color</item>
-        <item name="colorOnSecondary">@color/moon_secondary_light_color</item>
-
-        <!-- Цвет фона Chip-->
-        <item name="appChipBackgroundColor">@color/moon_primary_light_night_color</item>
-        <!-- Цвет фона CardView-->
-        <item name="appCardViewBackgroundColor">@color/moon_background_color</item>
-        <!-- Цвет фона BottomSheet-->
-        <item name="backgroundBottomSheetColor">@color/moon_secondary_color</item>
-
-        <!-- активное состояние (30% прозрачности для фона) -->
-        <item name="appSwitchActiveColor">@color/moon_control_activated_color</item>
-        <!-- неактивное состояние ползунка -->
-        <item name="appSwitchNoActiveColor">@color/moon_secondary_text_night_color</item>
-        <!-- Цвет дорожки, вдоль которой двигается ползунок -->
-        <item name="appSwitchTintColor">@color/moon_track_tint_color</item>
-
-        <item name="bottomAppBarStyle">@style/AppButton</item>
-        <item name="materialButtonStyle">@style/AppButton</item>
-    </style>
-
-    <style name="MarsTheme" parent="AppTheme">
-        <item name="colorPrimary">@color/mars_primary_color</item>
-        <item name="colorPrimaryVariant">@color/mars_primary_dark_color</item>
-        <item name="colorOnPrimary">@color/mars_primary_light_color</item>
-
-        <item name="colorSecondary">@color/mars_secondary_color</item>
-        <item name="colorSecondaryVariant">@color/mars_secondary_dark_color</item>
-        <item name="colorOnSecondary">@color/mars_secondary_light_color</item>
-
-        <!-- Цвет фона Chip-->
-        <item name="appChipBackgroundColor">@color/mars_primary_dark_color</item>
-        <!-- Цвет фона CardView-->
-        <item name="appCardViewBackgroundColor">@color/mars_secondary_dark_color</item>
-        <!-- Цвет фона -->
-        <item name="backgroundAppThemeColor">@color/mars_primary_light_color</item>
-        <!-- Цвет фона BottomSheet-->
-        <item name="backgroundBottomSheetColor">@color/mars_primary_dark_color</item>
-
-        <!-- Стили для маленьких и средних компонентов-->
-        <item name="shapeAppearanceSmallComponent">@style/AppShapeAppearance.SmallComponent</item>
-        <item name="shapeAppearanceMediumComponent">@style/AppShapeAppearance.MediumComponent</item>
-
-        <!-- активное состояние (30% прозрачности для фона) -->
-        <item name="appSwitchActiveColor">@android:color/holo_orange_dark</item>
-        <!-- неактивное состояние ползунка -->
-        <item name="appSwitchNoActiveColor">@color/moon_secondary_text_night_color</item>
-        <!-- Цвет дорожки, вдоль которой двигается ползунок -->
-        <item name="appSwitchTintColor">@android:color/darker_gray</item>
-
-    </style>
-
 </resources>
