--- a/app/src/main/res/layout/fragment_setting.xml
+++ b/app/src/main/res/layout/fragment_setting.xml
@@ -1,58 +1,90 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="?attr/backgroundAppThemeColor"
-    android:orientation="vertical">
+    android:layout_height="match_parent">
 
-    <TextView
-        style="@style/TitleTextStyle"
-        android:text="@string/settings" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="?attr/backgroundAppThemeColor"
+        android:orientation="vertical">
 
-    <com.google.android.material.chip.ChipGroup
-        android:id="@+id/chip_theme_group"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
+        <TextView
+            style="@style/TitleTextStyle"
+            android:text="@string/settings" />
 
-        <com.google.android.material.chip.Chip
-            android:id="@+id/moon_theme"
-            style="@style/AppChipChoice"
+        <com.google.android.material.chip.ChipGroup
+            android:id="@+id/chip_theme_group"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+
+            <com.google.android.material.chip.Chip
+                android:id="@+id/moon_theme"
+                style="@style/AppChipChoice"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/moon_theme" />
+
+            <com.google.android.material.chip.Chip
+                android:id="@+id/mars_theme"
+                style="@style/AppChipChoice"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/mars_theme" />
+
+        </com.google.android.material.chip.ChipGroup>
+
+        <TextView
+            android:id="@+id/selected_theme_name"
+            style="@style/TitleTextStyle" />
+
+        <androidx.appcompat.widget.SwitchCompat
+            android:id="@+id/switchNightMod"
+            style="@style/MaterialComponentsChipFragmentStyle"
+            android:minHeight="@dimen/minHeightSettingSwitch"
+            android:text="@string/night_mode"
+            android:theme="@style/SwitchStyle" />
+
+        <androidx.appcompat.widget.SwitchCompat
+            android:id="@+id/autoSwitchNightMod"
+            style="@style/MaterialComponentsChipFragmentStyle"
+            android:minHeight="@dimen/minHeightSettingSwitch"
+            android:text="@string/auto_night_mode"
+            android:theme="@style/SwitchStyle" />
+
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/apply_btn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/moon_theme" />
+            android:layout_gravity="center"
+            android:text="@string/apply" />
 
-        <com.google.android.material.chip.Chip
-            android:id="@+id/mars_theme"
-            style="@style/AppChipChoice"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/mars_theme" />
+    </LinearLayout>
 
-    </com.google.android.material.chip.ChipGroup>
+    <com.google.android.material.bottomappbar.BottomAppBar
+        android:id="@+id/bottom_app_bar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom"
+        app:backgroundTint="?attr/colorPrimary"
+        app:fabAlignmentMode="center"
 
-    <TextView
-        android:id="@+id/selected_theme_name"
-        style="@style/TitleTextStyle" />
+        app:fabCradleMargin="@dimen/fab_cradle_margin"
+        app:fabCradleRoundedCornerRadius="@dimen/fab_radius"
 
-    <androidx.appcompat.widget.SwitchCompat
-        android:id="@+id/switchNightMod"
-        style="@style/MaterialComponentsChipFragmentStyle"
-        android:theme="@style/SwitchStyle"
-        android:minHeight="@dimen/minHeightSettingSwitch"
-        android:text="@string/night_mode"/>
+        app:hideOnScroll="true"
+        app:layout_scrollFlags="scroll|enterAlways"
+        app:navigationIcon="@drawable/ic_hamburger_menu_bottom_bar" />
 
-    <androidx.appcompat.widget.SwitchCompat
-        android:id="@+id/autoSwitchNightMod"
-        style="@style/MaterialComponentsChipFragmentStyle"
-        android:theme="@style/SwitchStyle"
-        android:minHeight="@dimen/minHeightSettingSwitch"
-        android:text="@string/auto_night_mode"/>
-
-    <com.google.android.material.button.MaterialButton
-        android:id="@+id/apply_btn"
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/fab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:text="@string/apply" />
+        android:contentDescription="@string/any_message"
+        app:backgroundTint="?attr/colorAccent"
+        app:layout_anchor="@id/bottom_app_bar"
+        app:srcCompat="@drawable/ic_plus_fab"
+        app:tint="@color/white" />
 
-</LinearLayout>
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
