--- a/app/src/main/res/menu/menu_bottom_bar_setting_fragment.xml
+++ b/app/src/main/res/menu/menu_bottom_bar_setting_fragment.xml
@@ -9,8 +9,8 @@
         app:showAsAction="ifRoom" />
 
     <item
-        android:id="@+id/app_bar_settings"
-        android:icon="@drawable/ic_settings_menu"
-        android:title="@string/settings"
+        android:id="@+id/app_bar_back"
+        android:icon="@drawable/ic_back_fab"
+        android:title="@string/back"
         app:showAsAction="ifRoom" />
 </menu>
