--- a/app/src/main/res/menu/menu_bottom_bar_view_pager_fragment.xml
+++ b/app/src/main/res/menu/menu_bottom_bar_view_pager_fragment.xml
@@ -3,9 +3,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
-        android:id="@+id/app_favorite"
-        android:icon="@drawable/ic_favourite_menu"
-        android:title="@string/favorite"
+        android:id="@+id/app_bar_back"
+        android:icon="@drawable/ic_back_fab"
+        android:title="@string/back"
         app:showAsAction="ifRoom" />
 
     <item
