--- a/app/src/main/res/layout/fragment_coordinator_layout.xml
+++ b/app/src/main/res/layout/fragment_coordinator_layout.xml
@@ -2,8 +2,6 @@
 <androidx.coordinatorlayout.widget.CoordinatorLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@android:color/background_light"
-    android:fitsSystemWindows="true">
+    android:layout_height="match_parent">
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
