--- a/app/src/main/res/menu/menu_bottom_navigation_view.xml
+++ b/app/src/main/res/menu/menu_bottom_navigation_view.xml
@@ -9,9 +9,15 @@
         app:showAsAction="ifRoom" />
 
     <item
-        android:id="@+id/app_bar_favorite"
-        android:icon="@drawable/ic_favourite_menu"
-        android:title="@string/favorite"
+        android:id="@+id/app_bar_layouts"
+        android:icon="@drawable/ic_hamburger_menu_bottom_bar"
+        android:title="@string/layouts"
+        app:showAsAction="ifRoom" />
+
+    <item
+        android:id="@+id/app_bar_system"
+        android:icon="@drawable/bg_system"
+        android:title="@string/solar_system_tab_text"
         app:showAsAction="ifRoom" />
 
     <item
