--- a/app/src/main/res/layout/fragment_setting.xml
+++ b/app/src/main/res/layout/fragment_setting.xml
@@ -1,19 +1,99 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:layout_height="match_parent">
 
-        <TextView
-            android:id="@+id/title"
-            style="@style/TitleTextStyle"
-            android:text="@string/settings" />
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/vertical_left"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="0.075"/>
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/vertical_center"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="0.5"/>
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/vertical_right"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="0.75"/>
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/horizontal_for_title"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.05"/>
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/horizontal_for_bottom"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.125"/>
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/horizontal_for_name_selected_theme"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.175"/>
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/horizontal_for_switch_one"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.25"/>
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/horizontal_for_switch_two"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.3"/>
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/horizontal_for_apply_btn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.4"/>
+
+
+    <TextView
+        android:id="@+id/title"
+        style="@style/TitleTextStyle"
+        android:text="@string/settings"
+        app:layout_constraintBottom_toTopOf="@+id/horizontal_for_title"
+        app:layout_constraintEnd_toEndOf="@+id/vertical_center"
+        app:layout_constraintStart_toStartOf="@+id/vertical_center"
+        app:layout_constraintTop_toBottomOf="@+id/horizontal_for_title"/>
 
     <com.google.android.material.chip.ChipGroup
         android:id="@+id/chip_theme_group"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="50dp">
+        app:layout_constraintBottom_toTopOf="@+id/horizontal_for_bottom"
+        app:layout_constraintEnd_toEndOf="@+id/vertical_center"
+        app:layout_constraintStart_toStartOf="@+id/vertical_center"
+        app:layout_constraintTop_toBottomOf="@+id/horizontal_for_bottom">
 
         <com.google.android.material.chip.Chip
             android:id="@+id/moon_theme"
@@ -32,35 +112,39 @@
     </com.google.android.material.chip.ChipGroup>
 
     <TextView
-            android:id="@+id/selected_theme_name"
-            style="@style/TitleTextStyle"
-            app:layout_anchor="@+id/chip_theme_group"
-            app:layout_anchorGravity="bottom"/>
+        android:id="@+id/selected_theme_name"
+        style="@style/TitleTextStyle"
+        app:layout_constraintBottom_toTopOf="@+id/horizontal_for_name_selected_theme"
+        app:layout_constraintEnd_toEndOf="@+id/vertical_center"
+        app:layout_constraintStart_toStartOf="@+id/vertical_center"
+        app:layout_constraintTop_toBottomOf="@+id/horizontal_for_name_selected_theme"/>
 
-        <androidx.appcompat.widget.SwitchCompat
-            android:id="@+id/switch_night_mod"
-            style="@style/MaterialComponentsChipFragmentStyle"
-            android:minHeight="@dimen/minHeightSettingSwitch"
-            android:text="@string/night_mode"
-            android:theme="@style/SwitchStyle"
-            app:layout_anchor="@+id/selected_theme_name"
-            app:layout_anchorGravity="bottom|start"/>
+    <androidx.appcompat.widget.SwitchCompat
+        android:id="@+id/switch_night_mod"
+        style="@style/MaterialComponentsChipFragmentStyle"
+        android:text="@string/night_mode"
+        android:theme="@style/SwitchStyle"
+        app:layout_constraintBottom_toTopOf="@+id/horizontal_for_switch_one"
+        app:layout_constraintStart_toStartOf="@+id/vertical_left"
+        app:layout_constraintTop_toBottomOf="@+id/horizontal_for_switch_one"/>
 
-        <androidx.appcompat.widget.SwitchCompat
-            android:id="@+id/auto_switch_night_mod"
-            style="@style/MaterialComponentsChipFragmentStyle"
-            android:minHeight="@dimen/minHeightSettingSwitch"
-            android:text="@string/auto_night_mode"
-            android:theme="@style/SwitchStyle"
-            app:layout_anchor="@+id/switch_night_mod"
-            app:layout_anchorGravity="bottom|start"/>
+    <androidx.appcompat.widget.SwitchCompat
+        android:id="@+id/auto_switch_night_mod"
+        style="@style/MaterialComponentsChipFragmentStyle"
+        android:text="@string/auto_night_mode"
+        android:theme="@style/SwitchStyle"
+        app:layout_constraintBottom_toTopOf="@+id/horizontal_for_switch_two"
+        app:layout_constraintStart_toStartOf="@+id/vertical_left"
+        app:layout_constraintTop_toBottomOf="@+id/horizontal_for_switch_two"/>
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/apply_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/apply"
-        app:layout_anchor="@+id/auto_switch_night_mod"
-        app:layout_anchorGravity="bottom|center" />
+        app:layout_constraintBottom_toTopOf="@+id/horizontal_for_apply_btn"
+        app:layout_constraintEnd_toEndOf="@+id/vertical_center"
+        app:layout_constraintStart_toStartOf="@+id/vertical_center"
+        app:layout_constraintTop_toBottomOf="@+id/horizontal_for_apply_btn" />
 
-</androidx.coordinatorlayout.widget.CoordinatorLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
