--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -14,6 +14,10 @@
         <!-- Customize your theme here. -->
     </style>
 
+    <style name="Splash" parent="AppTheme">
+        <item name="android:windowBackground">@drawable/splash_background_drawable</item>
+    </style>
+
     <style name="AppTheme" parent="Theme.MaterialYouFromEalipatov">
         <item name="textColorConnected">@color/color_connected</item>
         <item name="textColorDisConnected">@color/color_disconnected</item>
