--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -16,6 +16,10 @@
         <item name="textColorDisConnected">@color/light_gray</item>
     </style>
 
+    <style name="Splash" parent="AppTheme">
+        <item name="android:windowBackground">@drawable/splash_background_drawable</item>
+    </style>
+
     <style name="AppTheme" parent="Theme.MaterialYouFromEalipatov">
         <item name="textColorConnected">@color/color_connected</item>
         <item name="textColorDisConnected">@color/color_disconnected</item>
